Fixed desktop layout, about section, and split the vision from mission content.. Aligned whatsappBtn to the right, added border-radius to about content divs, increased btns padding, increased scroll btn size

--- a/style.css
+++ b/style.css
@@ -121,6 +121,8 @@ padding: 0;
   color: var(--color-text-secondary);
   background-color: var(--color-bg);
     font: normal 300 1rem / 1.6 "Lato";
+    margin: 0;
+    padding: 0;
   }
   header {
        min-height: 100vh;
@@ -132,24 +134,24 @@ h1, .container p {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 #spanh1 {
   display: block;
   color: #ffffff;
   font-weight: bolder;
-  font-size: 1em;
-}
+ }
 
  .container p {
  max-width: 25rem;
  margin-bottom: 1rem;
 }
  h2, h3,h4 {
+  font-weight: 900;
   text-transform: uppercase;
-  padding: 1rem 0;
-  text-align: center;
+   text-align: center;
   color: var(--top-link-color);
+  margin-bottom: 1rem;
     font-family: Montserrat;
 }
 .contenth2 {
@@ -221,23 +223,22 @@ h1 {
     display: inline-block;
     background: var(--color-accent);
     color: var(--color-surface);
-    padding: 0.375rem .75rem;
+    padding: 1rem 1.5rem;
     text-transform: uppercase;
     letter-spacing: var(--spacing);
     cursor: pointer;
     transition: var(--transition);
-    font-size: 1rem;
-    border-radius: .2rem;
+     border-radius: .2rem;
     box-shadow: var(--dark-shadow);
    }
    a.btnwhite:hover {
     box-shadow: var(--light-shadow);
-    transform: scale(1.20);
+    transform: scale(1.05);
     background: var(--color-accent-hover);
    }
    .btn, button#button {
         outline: 1px solid var(--clr-4);
-        padding: .5rem .1rem;
+        padding: 1rem 1.5rem;
         border-radius: 0;
         color: var(--color-surface);
    }
@@ -259,13 +260,14 @@ h1 {
 /* MAIN CONTENt */
 section {
   padding: 50px 20px;
+  margin-bottom: 1rem;
 }
 
 #about,#service,#contact {
   height: auto;
 }
 main {
-  padding: 10px;
+  padding: 1rem;
   display: grid;
   grid-template-columns: 1fr;
   padding: 1rem 1.5rem;
@@ -275,8 +277,7 @@ article p {
 }
 p {
   text-align: justify;
-  padding: .09em;
-}
+margin-bottom: 1rem;}
 .digital-ol li {
   margin-left: 1.1rem;
   padding : 3px;
@@ -308,13 +309,13 @@ a.top-link {
   color: var(--color-surface);
   cursor: pointer;
   animation: bounce .3s ease-in-out infinite;
-  width: 35px;
+  width: 50px;
   visibility: hidden;
-  height: 35px;
+  height: 50px;
   display: grid;
   place-content: center;
   position: fixed;
-  right: 20px;
+  right: 30px;
   bottom: 5rem;
 }
 a.top-link:hover {
@@ -335,6 +336,19 @@ a.show-link {
     transform: scale(1);
  } 
 }
+/* animation */
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInup 1s ease forwards;
+  animation-delay: 0.3s;
+}
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 /* service section button */
  #service-btndiv{
   display: grid;
@@ -346,24 +360,29 @@ a.show-link {
  #goals{
   margin-top: 2rem;
  }
+ #vision {
+  margin-bottom: 2rem;
+ }
 #fieldset2 {
   margin-bottom: 1rem;
 }
  button#button {
   margin-top: 1rem;
   margin: 0 auto;
+  min-width: 100%;
  }
+#service-btn {
+      min-width: 250px;
 
+}
  #service-btn, button#button{
-    min-width: 150px;
   box-shadow: var(--light-shadow);
   cursor: pointer;
       border: 2px solid rgba(255, 255, 255, 0.316);
 
   display: block;
-  font-size: 1rem;
-  color: var(--color-surface);
-  padding: .345em 1em;  
+   color: var(--color-surface);
+  padding: .7rem 1.5rem;  
   background: var(--color-accent);
 text-decoration: underline;
 transition: var(--transition);
@@ -455,6 +474,7 @@ box-shadow: 0 5px 10px var(--dark-shadow);
   font-size: 0.95rem;
   font-weight: 500;
 }
+ 
 /* contact form */
 textarea {
   margin-top: .655rem;
@@ -480,7 +500,7 @@ justify-content: center;
 width: 40px;
 height: 40px;
 border-radius: 50%;
-font-size: 18px;
+font-size: 20px;
 margin: 5px;
 overflow: hidden;
 text-decoration: none;
@@ -523,7 +543,7 @@ section.map {
   place-items: center;
 }
   iframe {
-    min-width: 300px;
+    min-width: 350px;
     max-width: 100%;
     height: auto;
   border: 4px solid #2C73B8;
@@ -536,7 +556,7 @@ section.map {
   display: none;
   font-weight: bold;
   position: fixed;
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-align: center;
   bottom: 0;
   width: 100%;
@@ -546,8 +566,8 @@ section.map {
 .whatsappBtn {
   position: fixed;
   cursor: pointer;
-  bottom: 20rem;
-  right: 20px;
+  bottom: 4rem;
+  left: 20px;
   border-radius: 50%;
   font-size: 44px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2,);
@@ -562,29 +582,42 @@ section.map {
 }
 
 /* media queries */
-@media screen and  (max-width:799px) {
+@media screen and  (max-width:768px) {
   .call-button{
     display: block;
   }
+  h1 {
+    font-size:3rem
+  }
+  main {
+    padding: 2rem;
+  }
+   a.btnwhite, button#button, .btn, #service-btn {
+    font-size: 1rem;
+   }
 }
-@media  screen and (min-width: 800px) {
+@media  screen and (min-width: 1024px) {
   /* nav style */
   nav {
 background: transparent;  
 
 }
 h1 {
-  font-size: 5em;
+  font-size: 3.5em;
 
 }
 .container p {
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   text-align: center;
   max-width: 60rem;
  }
+ 
  main p {
-  max-width: 90rem;
-  font-size: 1.2rem;
+  display: block;
+  margin: 0 auto;
+  word-wrap: break-word;
+  max-width: 50rem;
+  font-size: 1.125rem;
   text-align: center;
  }
 h4 {
@@ -612,7 +645,7 @@ h4 {
   }
   nav ul li a {
     font-weight: bold;
-     font-size: 1.5rem;
+     font-size: 1.1rem;
      padding: 0;
      background: transparent;
      margin: 0 1rem;
@@ -632,10 +665,10 @@ h4 {
   }
   div#aboutcontent{
     display: flex;
-    column-gap: 10px;
-    flex-direction: row;
+     flex-direction: row;
     height:auto ;
-    justify-content: center;
+    gap: 2rem;
+    justify-content: space-between;
     align-items: center;
   }
   /* main */
@@ -647,26 +680,29 @@ h4 {
       margin: 0 auto;
    }
   .mission-statement{
- line-height: 1.7; 
-padding-bottom: 5px;
-font-size: 1.2em;
+ text-align: center;
+ padding: 10px;
 }
-.digital-ol li {
- font-size: 1.2em;
- 
+#mission, #goals, #vision {
+  flex: 1;
+  border-radius: 1rem;
 }
-   #goals {
-     line-height: 1.6; 
-     padding-bottom: .88em;
-    margin-top: 1rem;
-    height: auto;
-   }
+ #vision, #mission {
+  border-top-left-radius: 3rem;
+  margin-bottom: 0;
+  border-bottom-right-radius: 3rem;
+  }
+  
    main {
-     
+  max-width: 1200px;
+  margin: 0 auto;
   display: unset;
   grid-template-columns: unset;
   padding: 1rem 1.5rem;
 }
+#themeToggle{
+margin-left: 15rem;
+ }
 /* footer */
 .two-column {
   display: flex;
@@ -676,7 +712,7 @@ font-size: 1.2em;
  text-align: left;
  }
  .two-column h2 {
-  font-size: 1.399rem;
+  font-size: 1.5rem;
   text-align: center;
  }
  
